fixing the problem with carats overlapping on text

--- a/src/themes/uw-oshkosh-divi/style.scss
+++ b/src/themes/uw-oshkosh-divi/style.scss
@@ -198,10 +198,6 @@ header {
   top: 33px;
 }
 
-.nav a {
-  text-indent: -10px;
-}
-
 .nav > li > a {
   text-indent: 0;
 }
